@@ -4,6 +4,9 @@ Changelog
 3.4.2 (unreleased)
 ------------------
 
+- Make reference_prefix_manager deal properly with already deleted objects.
+  [phgross]
+
 - Use `ftw.profilehook` instead of setuphandlers.
   [deiferni]
 
